# aimesh

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  VISION.md  pyproject.toml
aimesh/: __init__.py  cli.py  learning.py  loaders.py  memory.py  models.py  node.py  privacy.py  research.py  router.py
aimesh/skills/: __init__.py  printing.py
docs/: ARCHITECTURE.md  MODULE_SPEC.md  NIGHT_SCHOOL.md  PEER_PROTOCOL_DRAFT.md  SKILL_COMPILER.md  VACUUM_BAG_MEMORY.md
examples/compiled/: sticker_pricing_rules.json
examples/drafts/: printing_stickers_basic.research_draft.json
examples/local_node/: capability_card.json
examples/modules/: printing_stickers_basic.json
examples/peer_nodes/: painting_node.json
examples/research/: sticker_pricing_notes.md
examples/training/: sticker_pricing_examples.json
schemas/: capability_card.schema.json  module_manifest.schema.json
scripts/: steve-demo.ps1
tests/: test_cli.py  test_loaders.py  test_module_learning.py  test_node.py  test_printing_skill.py  test_privacy.py  test_research_intake.py  test_router.py  test_steve_demo_script.py
